Fixing layout issues - About

--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -18,6 +18,10 @@
 	}
 }
 
+.tutors-list {
+	min-height: 70vh;
+}
+
 .tutor-card {
 	height: 80%;
 	width: 350px;
